--- a/NFL/packages.config
+++ b/NFL/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.Datepicker" version="1.6.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="ExpressiveAnnotations" version="2.9.2" targetFramework="net461" />
   <package id="jQuery" version="2.2.4" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
