--- a/NFL/NFL.csproj
+++ b/NFL/NFL.csproj
@@ -496,6 +496,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\aspnet-NFL-20161220065143.mdf" />
+    <Content Include="App_Data\aspnet-NFL-20161220065143_log.ldf">
+      <DependentUpon>aspnet-NFL-20161220065143.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-datepicker.css" />
     <Content Include="Content\bootstrap-datepicker.min.css" />
     <Content Include="Content\bootstrap-datepicker.standalone.css" />
@@ -623,7 +626,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
